app/styles/main.css
/* ... */
slick-prev:before,
.slick-next:before {
  font-family: 'slick';
  font-size: 20px;
  line-height: 1;
  opacity: 1 !important;
  color: #2185d0 !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.slick-prev:before,
.slick-next:before {
  font-family: 'slick';
  font-size: 20px;
  line-height: 1;
  opacity: 1 !important;
  color: #2185d0 !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.slider {
  width: calc(95%);
  margin: 0 auto;
}
.marginLeft-36 {
  margin-left: 2.4rem !important;
}
.courseHeader-rating.ui.star.rating .active.icon {
  background: 0 0!important;
  color: #2185d0 !important;
  text-shadow: none !important;
}
.down-arrow-accordion {
  float: right !important;
  font-size: large !important;
}
ul {
  list-style: none;
}
ul li {
  margin-bottom: 29px;
  position: relative;
}
ul li span.text {
  margin-right: 43%;
}
.verticalLine {
  position: absolute;
  height: 100%;
  width: 1px;
  border-left: 2px solid #d4d4d5;
  left: 15px;
  top: 23px;
}
ul li span:first-child {
  padding: 5px 4px;
}
.title-padding-left {
  padding-left: 8%;
}
ul.courseStr {
  -webkit-padding-start: 0px !important;
}
.green-color-course-str {
  color: #8cff8c;
}
.orange-color-course-str {
  color: #ffa500;
}
.grey-color-course-str {
  color: #d6d4d4;
}
li.subStr {
  height: 2em;
  padding-top: 1%;
  text-align: center;
  position: relative;
}
li.subStr::before {
  content: '';
  position: absolute;
  top: -3em;
  left: -0.1em;
  width: .1em;
  height: 4em;
  background: #d4d4d5;
  z-index: 1;
}
li.subStr::after {
  content: '';
  position: absolute;
  top: 0.9em;
  left: -0.1em;
  width: 3em;
  height: .1em;
  background: #d4d4d5;
}
ul.subList-padding {
  padding-top: 7% !important;
  padding-left: 8% !important;
}
.courseStructureHeader {
  background-color: #ffffff !important;
  background: rgba(255, 255, 255, 0.9) !important;
  border-bottom: 2px solid rgba(34, 36, 38, 0.15) !important;
}
.courseStructureHeaderText {
  padding-top: 2% !important;
  font-size: 16px;
  font-weight: bold;
}
.marginTop {
  margin: 0 !important;
}
.ui.styled.accordion.title {
  margin: 0;
  padding: 2%;
  font-size: 1em;
  padding: .75em 1em;
  color: rgba(0, 0, 0, 0.95);
  /* font-weight: 900; */
  border-top: 1px solid rgba(34, 36, 38, 0.15);
  transition: background .1s ease,color .1s ease;
  font-size: 20px;
}
.text-align-center {
  text-align: center !important;
}
.courseHeaderButton {
  margin-top: 3% !important;
  padding: 5% !important;
}
.course-list {
  padding: 0 !important;
}
.course-list .item {
  background: white !important;
  border: 1px solid rgba(34, 36, 38, 0.15) !important;
  box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15) !important;
  border-radius: .28571429rem!important;
  cursor: pointer;
}
.course-list .item .image img {
  padding: 0 !important;
  height: 100% !important;
}
.course-list .item .content {
  padding: 20px !important;
}
.course-list .item .resume-link {
  padding: 20px !important;
}
.course-list .item .resume-link .floated {
  padding-right: 30px !important;
}
.text-cencapitalize {
  text-transform: capitalize;
}
.card-extraContent-padding {
  padding: 10px 0px !important;
}
.card-content-description {
  padding-top: 10px !important;
}
.popular-section {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: 0 8px 6px -8px #d9d4d4;
  padding-top: 1em;
  padding-bottom: 1em;
}
.popular-page .ui.cards ~ .ui.cards {
  margin-top: 1.875em;
}
.course-rating .ui.mini.rating {
  font-size: .78571429rem;
  padding-top: 12px;
}
.course-rating > .description {
  clear: both;
  color: rgba(16, 16, 16, 0.88) !important;
  line-height: 1.5;
}
.popular-section > .card-section-header {
  font-weight: bold;
}
.courses-slider {
  padding-bottom: 1em;
  padding-top: 1em;
}
.accordian-right {
  width: 70% !important;
}
.accordian-right-text {
  font-size: 16px !important;
  color: black !important;
}
.accordian-left-bottomMargin {
  margin-bottom: 16px !important;
}
.accordian-left-text {
  padding: 2% !important;
  font-size: 16px !important;
  color: black !important;
}
.toc-left-nav-btn-content {
  text-align: left;
}
.toc-left-nav-btn-content > h4 {
  margin-bottom: 2px;
}
.toc-right-nav-btn-content {
  text-align: right;
}
.toc-right-nav-btn-content > h4 {
  margin-bottom: 2px;
}
.toc-note {
  font-size: 10px !important;
  margin: 15px !important;
}
.toc-note-content {
  margin-top: 46px !important;
}
.tocbutton {
  white-space: nowrap;
}
.homeCard.ui.card {
  max-width: 100%;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100% !important;
  min-height: 0;
  background: #fff;
  padding: 0;
  border: none;
  border-radius: .28571429rem;
  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
  transition: box-shadow 0.1s ease, -webkit-transform 0.1s ease;
  transition: box-shadow 0.1s ease, transform 0.1s ease;
  z-index: '';
}
.homeHeaderPadding {
  padding: 0.5em !important;
}
.ui.styled.accordion .removeline.title {
  margin: 0;
  padding: 0px 0px 0px 0px !important;
  color: rgba(0, 0, 0, 0.4);
  font-weight: 700;
  border-top: none !important;
  transition: background .1s ease,color .1s ease;
}
.accordian-HomeLeft-text {
  font-size: 14px !important;
  color: black !important;
  padding-left: 77% !important;
}
.accordian-homeIcon {
  color: black !important;
}
.ui.styled.accordion .active.title .angle.down.icon {
  background: 0 0;
  color: rgba(0, 0, 0, 0.95);
  -webkit-transform: rotate(270deg);
  transform: rotate(270deg);
}
.homePage .slick-slider {
  margin-bottom: 0px !important;
}
.opacity-cardContent {
  opacity: 0.2 !important;
}
.card-Content-Heading {
  padding-bottom: 10% !important;
  padding-left: 4% !important;
  font-size: 16px;
  margin: 11px;
  font-weight: 600;
  color: rgba(0, 0, 0, 0.7);
}
/* ... */

